--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,143 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>HelpDesk</title>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://surveyjs.azureedge.net/0.12.19/survey.jquery.min.js"></script>
-    <script src="/javascripts/survey.js"></script>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mesa de ayuda</title>
+    <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
+    <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+    
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Candal">
+    <link rel="stylesheet" type="text/css" href="home/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="home/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="home/css/style.css">
+    <!-- =======================================================
+        Theme Name: Medilab
+        Theme URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
+        Author: BootstrapMade.com
+        Author URL: https://bootstrapmade.com
+    ======================================================= -->
   </head>
-  <body>
-	  <div style="width: 60%;margin: auto;">
-	  	<div class="page-header">
-	  		<h1>Mesa de ayuda</h1>
-	  	</div>
-	  	<div id="surveyElement"></div>
-    	<div id="surveyResult"></div>
-	  </div>
+  <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
+  	<!--banner-->
+	<section id="banner" class="banner">
+		<div class="bg-color">
+			<nav class="navbar navbar-default navbar-fixed-top">
+			  <div class="container">
+			  	<div class="col-md-12">
+				    <div class="navbar-header">
+				      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				      </button>
+				      <a class="navbar-brand" href="#"><img src="images/IndependenceD.png" class="img-responsive" style="width: 140px; margin-top: -16px;"></a>
+				    </div>
+				    <div class="collapse navbar-collapse navbar-right" id="myNavbar">
+				      <ul class="nav navbar-nav">
+				        <li class="active"><a href="#banner">Home</a></li>
+				        <li class=""><a href="#cta-2">Acerca de:</a></li>
+				        <li class=""><a href="#contact">Solicitud de servicio</a></li>
+				      </ul>
+				    </div>
+				</div>
+			  </div>
+			</nav>
+			<div class="container">
+				<div class="row">
+					<div class="banner-info">
+						<div class="banner-logo text-center">
+							<img src="images/IndependenceD.png" class="img-responsive">
+						</div>
+						<div class="banner-text text-center">
+							<h1 class="white">Mesa de ayuda TI</h1>
+							<p>Brindamos soporte en el momento que necesites.</p>
+							<a href="#contact" class="btn btn-appoint">Realiza tu solicitud.</a>
+						</div>
+						<div class="overlay-detail text-center">
+			               <a href="#service"><i class="fa fa-angle-down"></i></a>
+			             </div>		
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--/ banner-->
+	
+	<!--cta 2-->
+	<section id="cta-2" class="section-padding">
+		<div class="container">
+			<div class=" row">
+				<div class="col-md-2"></div>
+	            <div class="text-right-md col-md-4 col-sm-4">
+	              <h2 class="section-title white lg-line">« Acerca del area<br> de TI »</h2>
+	            </div>
+	            <div class="col-md-4 col-sm-5">
+	              La Dirección de Tecnología de Independence S.A. se encarga de articular todos los sistemas y plataformas que garantizan el correcto funcionamiento de las diferentes dependencias organizacionales de la compañía, siempre alineado con las nuevas técnicas en materia de innovación tecnológica.<br>
+	              Parte de su labor consiste en apoyar desde su conocimiento, las diferentes tareas y gestiones que responden a los objetivos del plan estratégico organizacional, velando por el cumplimiento de la propuesta de valor desde la eficiencia operacional en los sistemas de la información y comunicaciones.
+	              <p class="text-right text-primary"><i>— Area de TI.</i></p>
+	            </div>
+	            <div class="col-md-2"></div>
+	        </div>
+		</div>
+	</section>
+	<!--cta-->
+	<!--contact-->
+	<section id="contact" class="section-padding">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h2 class="ser-title">Tu solicitud</h2>
+					<hr class="botm-line">
+				</div>
+				<div class="col-md-4 col-sm-4">
+			      <h3>Infomación de contacto:</h3>
+			      <div class="space"></div>
+			      <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>Calle 100 # 7-33<br>
+			        Torre 1 Piso 19</p>
+			      <div class="space"></div>
+			      <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>mesadeayuda@independence<br>.com.co</p>
+			      <div class="space"></div>
+			      <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>(57 1) 587 5333 Ext. 1907</p>
+			    </div>
+				<div class="col-md-8 col-sm-8 marb20">
+					<div id="surveyElement"></div>
+    				<div id="surveyResult"></div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--/ contact-->
+	<!--footer-->
+	<footer id="footer">
+		<div class="footer-line">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-12 text-center">
+						© Copyright Independence Drilling SA. Todos los derechos reservados
+                        <div class="credits">
+                            <!-- 
+                                All the links in the footer should remain intact. 
+                                You can delete the links only if you purchased the pro version.
+                                Licensing information: https://bootstrapmade.com/license/
+                                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Medilab
+                            -->
+                            Designed by Miguel Rivera</a>
+                        </div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!--/ footer-->
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://surveyjs.azureedge.net/0.12.19/survey.jquery.min.js"></script>
+    <script src="javascripts/survey.js"></script>
+    <script src="home/js/jquery.min.js"></script>
+    <script src="home/js/jquery.easing.min.js"></script>
+    <script src="home/js/bootstrap.min.js"></script>
+    <script src="home/js/custom.js"></script>
+    
   </body>
-  <script src="/javascripts/survey.js"></script>
 </html>
