LA autenticacion funciona correctamente, se arreglo el problema de envio de correos, falta ver estado del ticket y dashboard general

--- a/public/login/css/style.css
+++ b/public/login/css/style.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background: #c1bdba;
+  background-image:url("../../home/img/bg-banner1.jpg");
   font-family: 'Titillium Web', sans-serif;
 }
 
